<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color"
    tools:context=".PerfilUsuario">

  <ImageView
      android:id="@+id/imv_foto"
      android:layout_width="149dp"
      android:layout_height="146dp"
      android:layout_marginBottom="452dp"
      android:contentDescription="@string/imvPerfil"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:srcCompat="@tools:sample/avatars" />

  <TextView
      android:id="@+id/txt_nombre"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:gravity="center"
      android:text="@string/txtUsuario"
      android:textSize="24sp"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imv_foto" />

  <TextView
      android:id="@+id/txt_userId"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/txtUsuarioId"
      android:textSize="24sp"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

  <TextView
      android:id="@+id/txt_correo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/txtCorreo"
      android:textSize="22sp"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_userId" />

  <TextView
      android:id="@+id/txt_provider_id"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/txtProviderId"
      android:textSize="22sp"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_correo" />

  <TextView
      android:id="@+id/txt_disponibilidad"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/txtDisponibilidad"
      android:textSize="22sp"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_phone_number" />

  <TextView
      android:id="@+id/txt_phone_number"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/txtTelefono"
      android:textSize="22sp"
      android:textStyle="italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_provider_id" />

  <Button
      android:id="@+id/btn_logout"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="44dp"
      android:onClick="cerrarSesion"
      android:text="@string/btnCerrarSesion"
      android:textSize="24sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txt_disponibilidad"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/txtPerfil"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txtPerfil"
      android:textSize="30sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toTopOf="@+id/imv_foto"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.597" />
</androidx.constraintlayout.widget.ConstraintLayout>