<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/like"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="236dp"
        android:layout_height="221dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/resta2" />

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="203dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.283">

        <Button
            android:id="@+id/btnMesas"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verMesas"
            android:text="@string/btnMesas"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnPerfil"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verPerfil"
            android:text="@string/btnPerfil"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnCerrarSesion"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cerrarSesion"
            android:text="@string/btnCerrarSesion"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btnBateria"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verBateria"
            android:text="@string/btnBateria"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>